# Podcastpio

./: .env.example  .replit  DEPENDENCIES.md  DEPLOYMENT.md  NETLIFY_DEPLOYMENT.md  NETLIFY_FINAL_FIX.md  NETLIFY_READY.md  README_STREAMLIT.md  _redirects  app.py  config.toml  deploy.sh  netlify-build.sh  netlify.toml  package-lock.json  package.json  pyproject.toml  python_requirements.txt  replit.md  run_local.py  run_streamlit.py  streamlit_app.py  tailwind.config.ts  test_app.py  vite.config.netlify.ts
.streamlit/: config.toml
attached_assets/: Pasted-The-Netlify-deploy-errored-with-the-following-guidance-provided-Diagnosis-The-build-failur-1755326454216_1755326454217.txt  Pasted-The-Netlify-deploy-errored-with-the-following-guidance-provided-Diagnosis-line-91-L91--1755326874975_1755326874976.txt
client/src/: App.tsx  index.css
client/src/pages/: home.tsx
netlify/: _redirects
netlify/functions/: api.ts
server/: index.ts  routes.ts  storage.ts
server/services/: gemini.ts
shared/: schema.ts
